--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -72,3 +72,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ToonTanks.Projectile.HitCameraShake",NewName="/Script/ToonTanks.Projectile.HitCameraShakeClass")
